phew it worked... now trying to ensure exit icon remains visible on small IOS devices

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,8 @@ img {
 	font-size: 4rem;
 	align-self: flex-start;
 	margin-top: 10px;
+	position: relative;
+	z-index: 150;
 }
 
 .exit-modal {
